--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "daisyui": "latest",
+    "autoprefixer": "^10.4.16",
     "tailwindcss": "^3.3.3"
   }
 }
